--- a/README.textile
+++ b/README.textile
@@ -3,6 +3,14 @@ h1. Maintainance
 * Please notice that this Project is not under current/heavy development
 * If you would like to take ownership, get in contact with the maintainers
 
+h2. Working with Docker
+
+This script allow you to make a dump in the host from a running mongo container, you just need to set __DOCKER_LINK__ and __DOCKER_CONTAINER__
+
+```
+DOCKER_LINK="db_1:mongo"
+DOCKER_CONTAINER="mongo:3.3"
+```
 
 h2. AutoMongoBackup
 
